--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,7 +1,7 @@
-name: bestdori_tools
-display_name: BanG Dream Bestdori 工具
-desc: BanG Dream! 少女乐团派对 游戏查询工具：活动信息、卡面查询、生日祝福、订阅播报等功能
-version: 1.3.0
-author: findx1197
+name: astrbot_plugin_bestdori_tools
+display_name: BanG！Dream！
+desc: 少女乐团派对 游戏查询工具：基于Bestdori资源网的活动信息、卡面查询、生日祝福、订阅播报（应该没成）等简易功能，代码基本是ai跑的，bug大堆，但还是跑通了，等其它大佬能够集成更多茨菇没有的指令简单的有趣功能。
+version: 1.3.1
+author: findx
 repo: https://github.com/findx010197/astrbot_plugin_bestdori_tools
-repo_root_name: astrbot_plugin_bestdori_tools
+social_link: https://github.com/findx010197
